--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"build": "react-scripts build",
 		"eject": "react-scripts eject",
 		"lint": "eslint --fix --ext .ts,.tsx .",
-		"stylelint": "stylelint --fix **/*.{css,scss}"
+		"stylelint": "stylelint --fix **/*.{css,scss}",
+		"deploy":"aws s3 sync build/ s3://go-expert-frontend --acl public-read"
 	},
 	"eslintConfig": {
 		"extends": [
