update EB App environment name

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   provider: elasticbeanstalk
   region: "ap-southeast-2" ### AWS region of your choice
   app: "goexperts" ### Your EB App name
-  env: "Goexperts-env" ### Your EB App environment name
+  env: "Goexperts-env-2" ### Your EB App environment name
   bucket_name: "elasticbeanstalk-ap-southeast-2-934098609933" ### S3 bucket name
   bucket_path: "EBApptest" ### S3 folder name under S3 bucket above
   on:
